compiler/src/snapshots/arachne_compiler__compiler__tests__call__compile_tail_call.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"f\".into(),\n                            [\"fn\".into(), [].into(),\n                                        [\"f\".into()].into()].into()].into(),\n                [\"f\".into()].into()]).await"
---
jump 5
environment 0
tail_call 0
return
environment 0
close 3 0 1
peek 0
call 0
dump
drop
