compiler/src/snapshots/arachne_compiler__compiler__tests__call__compile_tail_call_in_if.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"let-rec\".into(), \"f\".into(),\n                            [\"fn\".into(), [].into(),\n                                        [\"if\".into(), 1.0.into(), 42.0.into(),\n                                                    [\"f\".into()].into()].into()].into()].into(),\n                [\"f\".into()].into()]).await"
---
jump 1a
float64 1
branch a
float64 42
return
peek 0
tail_call 0
close 3 0 0
peek 0
call 0
dump
drop
